--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -7,9 +7,10 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /><uses-permission android:name="android.permission.INTERNET"/>
-    
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -32,6 +33,10 @@
         <activity
             android:name="com.biju.login.RegisteredActivity"
             android:label="@string/title_activity_registered" >
+        </activity>
+        <activity
+            android:name="com.biju.function.NewteamActivity"
+            android:label="@string/title_activity_newteam" >
         </activity>
     </application>
 
