--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -42,6 +42,27 @@
             android:name="com.biju.NewteamActivitys"
             android:label="@string/title_activity_newteam_activitys" >
         </activity>
+        <activity
+            android:name="com.biju.function.RequestCodeActivity"
+            android:label="@string/title_activity_request_code"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.biju.function.UserSettingActivity"
+            android:label="@string/title_activity_user_setting" >
+        </activity>
+        <activity
+            android:name="com.biju.function.AddFriendsActivity"
+            android:label="@string/title_activity_add_buddy" >
+        </activity>
+        <activity
+            android:name="com.biju.function.FindFriendsActivity"
+            android:label="@string/title_activity_find_friends" >
+        </activity>
+        <activity
+            android:name="com.biju.Mdfsdfsdf"
+            android:label="@string/title_activity_mdfsdfsdf" >
+        </activity>
     </application>
 
 </manifest>
