--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 
 
     <!-- 读取本地通讯录 -->
     <!-- 读联系人权限 -->
@@ -50,7 +51,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:name="com.biju.APP.MyApplication"
+        >
         <activity
             android:name="com.biju.MainActivity"
             android:label="@string/app_name" >
