--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -114,6 +114,10 @@
             android:name="com.biju.function.TeamSettingActivity"
             android:label="@string/title_activity_team_setting" >
         </activity>
+        <activity
+            android:name="com.biju.function.NewPartyActivity"
+            android:label="@string/title_activity_new_party" >
+        </activity>
     </application>
 
 </manifest>
