--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -75,11 +75,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-<!--     百度签名 -->
-         <meta-data
+
+        <!-- 百度签名 -->
+        <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="yGkNOAGTinoQq0oFRuksvUIi" />
-<!--     百度签名 -->
+        <!-- 百度签名 -->
         <activity
             android:name="com.biju.MainActivity"
             android:label="@string/app_name" >
@@ -146,13 +147,17 @@
             android:name="com.biju.function.MapActivity"
             android:label="@string/title_activity_map" >
         </activity>
-<!--      百度地图-->
-         <service
+        <!-- 百度地图 -->
+        <service
             android:name="com.baidu.location.f"
             android:enabled="true"
             android:process=":remote" >
         </service>
-<!--      百度地图-->
+        <!-- 百度地图 -->
+        <activity
+            android:name="com.biju.function.TimeActivity"
+            android:label="@string/title_activity_time" >
+        </activity>
     </application>
 
 </manifest>
