--- a/Lib_zzy/project.properties
+++ b/Lib_zzy/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-19
 android.library=true
-android.library.reference.1=..\\lib_Volley
-android.library.reference.2=..\\lib_baidumap
-android.library.reference.3=../lib_BaiduLocDemo
+android.library.reference.1=..\\lib_baidumap
+android.library.reference.2=..\\lib_BaiduLocDemo
+android.library.reference.3=../lib_Volley
