--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -72,7 +72,7 @@
     <application
         android:name="com.biju.APP.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/photo_b"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
