--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -72,7 +72,7 @@
     <application
         android:name="com.biju.APP.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/photo_b"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
@@ -108,6 +108,11 @@
         </activity>
         <activity
             android:name="com.biju.function.RequestCodeActivity"
+            android:label="@string/title_activity_request_code"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.biju.function.RequestCode2Activity"
             android:label="@string/title_activity_request_code"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" >
         </activity>
@@ -165,6 +170,15 @@
         <activity
             android:name="com.biju.function.PartyDetailsActivity"
             android:label="@string/title_activity_party_details" >
+        </activity>
+        <activity
+            android:name="com.biju.function.MoreActivity"
+            android:label="@string/title_activity_more"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.biju.function.BigMapActivity"
+            android:label="@string/title_activity_big_map" >
         </activity>
     </application>
 
