--- a/agree/project.properties
+++ b/agree/project.properties
@@ -12,6 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\Lib_zzy
-android.library.reference.2=..\\lib_PullToRefresh
-android.library.reference.3=E:/workspace/BJ/Photo
+android.library.reference.1=../Lib_zzy
+android.library.reference.2=../lib_PullToRefresh
