--- a/lib_Dialog/project.properties
+++ b/lib_Dialog/project.properties
@@ -12,8 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\Lib_zzy
-android.library.reference.2=..\\lib_PullToRefresh
-android.library.reference.1=..\\Lib_zzy
-android.library.reference.2=..\\lib_PullToRefresh
-android.library.reference.3=../lib_Dialog
+android.library=true
