--- a/agree/project.properties
+++ b/agree/project.properties
@@ -14,3 +14,6 @@
 target=android-19
 android.library.reference.1=..\\Lib_zzy
 android.library.reference.2=..\\lib_PullToRefresh
+android.library.reference.1=..\\Lib_zzy
+android.library.reference.2=..\\lib_PullToRefresh
+android.library.reference.3=../lib_Dialog
