--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -11,15 +11,18 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
-    <!--极光推送  -->
+
+    <!-- 极光推送 -->
     <permission
         android:name="com.biju.permission.JPUSH_MESSAGE"
         android:protectionLevel="signature" />
-  
-    <!-- Required  一些系统要求的权限，如访问网络等-->
+
+    <!-- Required  一些系统要求的权限，如访问网络等 -->
     <uses-permission android:name="com.biju.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -31,10 +34,8 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>  
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
-    
-    
     <!-- Optional for location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -42,7 +43,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-	<!--极光推送  -->
+    <!-- 极光推送 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -107,7 +108,7 @@
     <application
         android:name="com.biju.APP.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/photo_b"
+        android:icon="@drawable/about_us"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
@@ -215,29 +216,22 @@
             android:name="com.biju.function.BigMapActivity"
             android:label="@string/title_activity_big_map" >
         </activity>
-        
         <activity
-            android:name="com.BJ.photo.ImageFile" 
+            android:name="com.BJ.photo.ImageFile"
             android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.BJ.photo.AlbumActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
-        <activity
-            android:name="com.BJ.photo.ShowAllPhoto" >
+        <activity android:name="com.BJ.photo.ShowAllPhoto" >
         </activity>
-        <activity
-            android:name="com.BJ.photo.GalleryActivity"
-            >
+        <activity android:name="com.BJ.photo.GalleryActivity" >
         </activity>
-        <activity
-            android:name="com.BJ.photo.BitmapCache"
-            >
+        <activity android:name="com.BJ.photo.BitmapCache" >
         </activity>
-        
-        
-        <!--极光推送  -->
+
+        <!-- 极光推送 -->
         <!-- Required -->
         <service
             android:name="cn.jpush.android.service.PushService"
@@ -274,7 +268,6 @@
 
                 <data android:scheme="package" />
             </intent-filter>
-            
             <action android:name="cn.jpush.android.intent.REGISTRATION" />
         </receiver>
         <!-- Required SDK核心功能 -->
@@ -311,11 +304,16 @@
         <meta-data
             android:name="JPUSH_APPKEY"
             android:value="e421fab745ef7fc8bce9d0c3" />
-        <!--极光推送  -->
-        <!--7e243519bad6fd8b93860d6e  -->
-        
-        
-        
+        <!-- 极光推送 -->
+        <!-- 7e243519bad6fd8b93860d6e -->
+        <activity
+            android:name="com.biju.function.BindingPhoneActivity"
+            android:label="@string/title_activity_binding_phone" >
+        </activity>
+        <activity
+            android:name="com.biju.function.CommentsListActivity"
+            android:label="@string/title_activity_comments_list" >
+        </activity>
     </application>
 
 </manifest>
