--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -105,7 +105,7 @@
     <application
         android:name="com.biju.APP.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/photo_b"
+        android:icon="@drawable/about_us"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
