--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -312,6 +312,10 @@
             android:name="com.biju.function.CommentsListActivity"
             android:label="@string/title_activity_comments_list" >
         </activity>
+        <activity
+            android:name="com.biju.function.FriendsDataActivity"
+            android:label="@string/title_activity_friends_data" >
+        </activity>
     </application>
 
 </manifest>
