--- a/agree/project.properties
+++ b/agree/project.properties
@@ -17,3 +17,4 @@ android.library.reference.2=..\\lib_PullToRefresh
 android.library.reference.1=..\\Lib_zzy
 android.library.reference.2=..\\lib_PullToRefresh
 android.library.reference.3=../lib_Dialog
+android.library.reference.3=..\\lib_Dialog
