--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -268,6 +268,7 @@
 
                 <data android:scheme="package" />
             </intent-filter>
+
             <action android:name="cn.jpush.android.intent.REGISTRATION" />
         </receiver>
         <!-- Required SDK核心功能 -->
@@ -313,6 +314,10 @@
         <activity
             android:name="com.biju.function.CommentsListActivity"
             android:label="@string/title_activity_comments_list" >
+        </activity>
+        <activity
+            android:name="com.biju.function.FriendsDataActivity"
+            android:label="@string/title_activity_friends_data" >
         </activity>
     </application>
 
