--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -13,6 +13,13 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
+    <!-- 发送短信权限 -->
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    
+    <!--添加联系人权限  -->
+    <uses-permission android:name="android.permission.READ_CONTACTS" />  
+	<uses-permission android:name="android.permission.WRITE_CONTACTS" />  
 
     <!-- 极光推送 -->
     <permission
