--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -167,9 +167,11 @@
             android:name="com.biju.MainActivity"
             android:label="@string/app_name" >
         </activity>
+
+        <!-- 打开应用显现的首界面 -->
         <activity
-            android:name="com.biju.login.LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:name="com.biju.login.BeforeLoginActivity"
+            android:label="@string/title_activity_before_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -413,6 +415,30 @@
             android:theme="@style/MyDialogStyle" >
         </activity>
         <!-- 环信部分 -->
+
+        <activity
+            android:name="com.biju.login.LoginJumpActivity"
+            android:label="@string/title_activity_login_jump"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.biju.login.PhoneRegisteredActivity"
+            android:label="@string/title_activity_phone_registered" >
+        </activity>
+        <activity
+            android:name="com.biju.login.PhoneLoginActivity"
+            android:label="@string/title_activity_phone_login" >
+        </activity>
+        <activity
+            android:name="com.biju.wxapi.WXEntryActivity"
+            android:label="@string/title_activity_wxentry"
+             >
+              <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="sdksample"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
