--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -165,7 +165,9 @@
         <!-- 百度签名 -->
         <activity
             android:name="com.biju.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+             >
         </activity>
 
         <!-- 打开应用显现的首界面 -->
@@ -222,7 +224,9 @@
         </activity>
         <activity
             android:name="com.biju.function.GroupActivity"
-            android:label="@string/title_activity_group" >
+            android:label="@string/title_activity_group"
+            android:launchMode="singleTask"
+             >
         </activity>
         <activity
             android:name="com.biju.function.TeamSettingActivity"
