--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -167,6 +167,7 @@
             android:name="com.biju.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
+           android:screenOrientation="portrait"
              >
         </activity>
 
