--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -102,6 +102,12 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- LeanChat权限 -->
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+<!--     OSS -->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
     <application
         android:name="com.biju.APP.MyApplication"
