--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -131,7 +131,7 @@
             android:value="3" />
         -->
 
-
+<!-- yGkNOAGTinoQq0oFRuksvUIi -->
         <!-- 百度签名 -->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
