--- a/agree/.settings/org.eclipse.core.resources.prefs
+++ b/agree/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//src/com/biju/pay/PayBaseActivity.java=UTF-8
 encoding//src/com/biju/wechatpayutils/MD5.java=UTF-8
 encoding//src/com/biju/wechatpayutils/MD5Util.java=UTF-8
 encoding//src/com/biju/wechatpayutils/Util.java=UTF-8
+encoding//src/com/biju/withdrawal/TouchBalanceActivity.java=UTF-8
 encoding//src/com/biju/wxapi/WXPayEntryActivity.java=UTF-8
 encoding//src/com/example/huanxin/AlertDialog.java=UTF-8
 encoding//src/com/example/huanxin/ChatActivity.java=UTF-8
@@ -24,6 +25,7 @@ encoding//src/com/example/testleabcloud/ChatActivityLean.java=UTF-8
 encoding//src/com/example/testleabcloud/PhotoViewActivity.java=UTF-8
 encoding//src/com/example/testleabcloud/SecActivity.java=UTF-8
 encoding//src/com/fragment/ChatFragment.java=UTF-8
+encoding//src/com/fragment/SettingFragment.java=UTF-8
 encoding//src/leanchatlib/controller/ChatManager.java=UTF-8
 encoding//src/leanchatlib/utils/PhotoUtils.java=UTF-8
 encoding//src/leanchatlib/utils/Utils.java=UTF-8
