--- a/agree/.settings/org.eclipse.core.resources.prefs
+++ b/agree/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/com/biju/function/NewteamActivity.java=UTF-8
+encoding//src/com/biju/function/PartyDetailsActivity.java=UTF-8
 encoding//src/com/biju/pay/PayBaseActivity.java=UTF-8
 encoding//src/com/biju/wechatpayutils/MD5.java=UTF-8
 encoding//src/com/biju/wechatpayutils/MD5Util.java=UTF-8
