--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -524,7 +524,7 @@
             android:label="@string/title_activity_chat_room" >
         </activity>
         <activity
-            android:name="com.biju.PhotoActivity"
+            android:name="com.biju.chatroom.PhotoActivity"
             android:label="@string/title_activity_photo" >
         </activity>
         <activity
